<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_opt_main"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_music_library"/>
<!--    <item-->
<!--        android:id="@+id/menu_opt_newplaylist"-->
<!--        android:icon="@drawable/ic_menu_playback"-->
<!--        android:title="@string/menu_player"/>-->
<item android:id="@+id/menu_opt_stop" android:title="@string/menu_stop" android:icon="@drawable/stop">
</item>
<item android:id="@+id/menu_opt_load_track" android:title="@string/menu_add_track_locally" android:icon="@drawable/download1"></item>
<item android:id="@+id/menu_opt_put_track" android:title="@string/menu_add_track_remotely" android:icon="@drawable/upload1"></item>
<item android:id="@+id/menu_current_playlist" android:title="@string/menu_current_playlist" android:icon="@drawable/playlist_dark"></item>
</menu>
